# mouseduck

./: CMakeLists.txt  README.md  main.c
.github/workflows/: Build.yml
include/: action.h  globals.h  worker.h
resources/: resource.rc
src/: action.c  main.c  worker.c
